examples/invalid_crypto_boundaries/unknown_allowed_hash.argx
module m
crypto_boundary Bad {
  allowed_hashes ["ghost256"]
  key_material denied
  secret_material denied
  execution disabled
  purpose ["test"]
}
